fixed issue on mobile where buttons would overlap on save guide form when keyboard was open

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -10,6 +10,7 @@ font-family: 'Athiti', sans-serif; */
 }
 
 .welcome {
+  font-family: 'Press Start 2P', cursive; 
   border-top: solid 2px #e7dfe7;
   border-bottom: solid 2px #e7dfe7;
   padding: .3em;
